Finalisation projet Sprint 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=medilabo_ui
 server.port=8090
 medilabo_gateway.url=http://localhost:8888
+#medilabo_note.url=http://localhost:8082
